--- a/index.html
+++ b/index.html
@@ -280,6 +280,28 @@
 								<div class="custom--panel"><p>Eth, homie for us.</p></div>
 							</div>
 							<div class="accordion--item">
+								<button class="custom--accordion h2 f-akira">Mint price?</button>
+								<div class="custom--panel"><p>0.12 Eth</p></div>
+							</div>
+							<div class="accordion--item">
+								<button class="custom--accordion h2 f-akira">What is our beliefs?</button>
+								<div class="custom--panel"><p>We believe that all gender, no matter female or male, should be treated equally. Gender should be liquid - no stereotype! Female should be respected and empowered - and we would like to grasp the wave of Web 3 to promote our belief. Peers, regardless of gender, are welcome to join us. Not necessarily girls to join us - but boys who understand and respect our belief. Empowering women simply implies to provide opportunities for girls to sharpen their edges and boost their bargaining power. With Web 3 development, there are ample opportunities for women. This is also the best chance for our belief to seed and boom.</p></div>
+							</div>
+							<div class="accordion--item">
+								<button class="custom--accordion h2 f-akira">How far are we going?</button>
+								<div class="custom--panel"><p>We are going to build an ecosystem which bases on our belief<br> - to promote gender equality.  Geanz is just the first piece to the puzzle. We have figured out the journey we are going to go through. Our hope is to build a community, which gathers peers with similar beliefs as we do, through Geanz. With the success in Geanz, we could start building the infrastructure of the ecosystem.</p></div>
+							</div>
+							<div class="accordion--item">
+								<button class="custom--accordion h2 f-akira">Any milestones for the ecosystem?</button>
+								<div class="custom--panel"><p>Milestones:<br>
+- (Geanz) Minted 50% : start our next DeFi project, seek for VC’s funding<br>
+- (Geanz) Minted 75%: Thankful reward for Geanz holders - one lucky draw per day (gift: 0.025 ETH)<br>
+- (Geanz) Minted 100%: DAO formation, kick-off of VC-less project development for DeFi, prepare for IDO<br>
+- Paralelly prepare for the launch of next nft - Bbeanz - which comes from the bred of Geanz and Beanz<br>
+- Launch of DeFi, which allows Geanz/Bbeanz holders to stake their NFTs and boost their yield in liquidity mining<br>
+- More pieces of the puzzle to go >>></p></div>
+							</div>
+							<div class="accordion--item">
 								<button class="custom--accordion h2 f-akira">What benefits?</button>
 								<div class="custom--panel"><p>Women empower women<br>
 															  Spread love.<br>
