--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 					</nav>
 				</div>
 			</header>
-			<section id="home-baby" class="position-relative content-inner d-flex align-items-end justify-content-center" background-color: transparent>
+			<section id="home-baby" class="position-relative content-inner d-flex align-items-end justify-content-center">
 				<h1 class="text-uppercase text-center">
 					<img src="assets/imgs/logo.png" alt="" srcset="" height="50px" />
 				</h1>
