--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 		<link href="/assets/css/style.css" rel="stylesheet" />
 		<link href="/assets/css/chunk.css" rel="stylesheet" />
 		<link href="/assets/css/main.css" rel="stylesheet" />
+
+      <style>
+         body {
+            background-image: url("/assets/imgs/bg.png");
+         }
+      </style>
 	</head>
 	<body data-new-gr-c-s-check-loaded="14.1050.0" data-gr-ext-installed="">
 		<noscript>You need to enable JavaScript to run this app.</noscript>
