--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root">
 			<header>
+
+      <style>
+         body {
+            background-image: url("/assets/imgs/bg.png");
+         }
+      </style>
 				<div class="container-fluid">
 					<nav class="navbar navbar-expand-xl justify-content-between">
 						<a class="navbar-brand flex-grow-1" href="/#home">
