--- a/index.html
+++ b/index.html
@@ -332,6 +332,13 @@
 				</div>
 			</section>
 			<footer>
+
+
+      <style>
+         body {
+            background-image: url("/assets/imgs/bg.png");
+         }
+      </style>
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-lg-6 col-12 footer--social-container">
