--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 		<link href="/assets/css/main.css" rel="stylesheet" />
 
       <style>
+.header {
+background-image: url("/assets/imgs/bg.png");
+	      }
+
          body {
             background-image: url("/assets/imgs/bg.png");
          }
@@ -35,11 +39,7 @@
 		<div id="root">
 			<header>
 
-      <style>
-         body {
-            background-image: url("/assets/imgs/bg.png");
-         }
-      </style>
+
 				<div class="container-fluid">
 					<nav class="navbar navbar-expand-xl justify-content-between">
 						<a class="navbar-brand flex-grow-1" href="/#home">
@@ -334,11 +334,7 @@
 			<footer>
 
 
-      <style>
-         body {
-            background-image: url("/assets/imgs/bg.png");
-         }
-      </style>
+ 
 				<div class="container">
 					<div class="row align-items-center">
 						<div class="col-lg-6 col-12 footer--social-container">
